@@ -721,8 +721,9 @@ public:
 	static bool have_existing (std::string);
 	static boost::filesystem::path config_file ();
 
-	static boost::optional<boost::filesystem::path> test_path;
-
+	/** If set, this overrides the standard path (in home, Library, AppData or wherever) for config.xml and cinemas.xml */
+	static boost::optional<boost::filesystem::path> override_path;
+	
 private:
 	Config ();
 	static boost::filesystem::path path (std::string file, bool create_directories = true);
