@@ -1,5 +1,9 @@
 2018-07-18  Carl Hetherington  <cth@carlh.net>
 
+	* Add command-line option to specify directory containing config (#1284).
+
+2018-04-27  Carl Hetherington  <cth@carlh.net>
+
 	* Version 2.12.8 released.
 
 2018-06-07  Carl Hetherington  <cth@carlh.net>
